session_20220328/lab01/sql-admin.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mysql-admin
  labels:
   role: sqladmin
spec:
      containers:
      - name: mysql
        image: mysql:5.7
        args: ["sleep", "36000"]
