session_20220328/lab01/blockedsql.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: sql-server-policies
  namespace: default
spec:
  podSelector:
    matchLabels:
      role: mysql
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: wordpress
    ports:
    - protocol: TCP
      port: 3306
